--- a/generate_ini_files.pod
+++ b/generate_ini_files.pod
@@ -37,7 +37,6 @@ The template that should be use for generating the ini files
 =for Euclid:
         file.type:    readable
 
-
 =item --workflow-name[=][ ]<worklflow-name>
 
 This is the name as it would appear in the metadata and in SeqWare for the workflow you would like to schedule donors for.
@@ -52,6 +51,8 @@ This is the location at which the analysis will be performed
 
 =head1 OPTIONAL
 
+Should specify one of --whitlist, --donors or --cloud-env
+
 =item --whitelist[=][ ]<whitelist-file>
 
 The path to the whitelist the ini files will be generated for
@@ -59,10 +60,19 @@ The path to the whitelist the ini files will be generated for
 =for Euclid:
        whitelist-file.type: readable
 
+
 =item --donors[=][]<number-of-donors>
 
+This flag should be used if you would like to recieve a donor that has not been scheduled in the last 30 days. (for testing only at this point)
+ 
 =for Euclid:
       number-of-donors.type: int > 0
+
+
+
+=item --cloud-env[=][ ]<env>
+
+The name of the environment according to the folder listed in: https://github.com/ICGC-TCGA-PanCancer/pcawg-operations
 
 =item --test
 
