--- a/generate_ini_files.pod
+++ b/generate_ini_files.pod
@@ -68,11 +68,13 @@ This flag should be used if you would like to recieve a donor that has not been 
 =for Euclid:
       number-of-donors.type: int > 0
 
-
-
 =item --cloud-env[=][ ]<env>
 
 The name of the environment according to the folder listed in: https://github.com/ICGC-TCGA-PanCancer/pcawg-operations
+
+=item --local-file-dir[=][ ]<directory>
+
+Specify this path in order to have the tumourBams and controlBams be specifeid with full paths
 
 =item --test
 
