--- a/generate_ini_files.pod
+++ b/generate_ini_files.pod
@@ -6,7 +6,7 @@ Version 0.0.1
 
 Adam Wright
 
-=over
+=over 4
 
 =item --usage
 
@@ -25,6 +25,8 @@ A tool for generating workflow ini files for the PanCancer project
 Central Decider Client
 
 =head1 REQUIRED
+
+=over
 
 =item --gnos-repo[=][ ]<gnos_repo>
 
@@ -49,9 +51,13 @@ This will be provided to you by OICR
 
 This is the location at which the analysis will be performed
 
+=back
+
 =head1 OPTIONAL
 
 Should specify one of --whitlist, --donors or --cloud-env
+
+=over
 
 =item --whitelist[=][ ]<whitelist-file>
 
@@ -83,3 +89,5 @@ With this parameter specified it will query the central database but the central
 =item --force
 
 This option make it so that INI files will be generated regardless of whether or not they have been run before.
+
+=back
